--- a/public/style.css
+++ b/public/style.css
@@ -322,6 +322,7 @@ input[type="submit"]
   background-color: #39B449 !important;
   border-style: none !important;
   color: #fff !important;
+  cursor: pointer;
   margin: 0 20px 0 0 !important;
   padding: 5px 20px !important;
   padding: 4px 10px !important;
@@ -340,6 +341,12 @@ input[type="submit"]:hover
   margin: 0 20px 0 0 !important;
   outline-width: 0 !important;
   padding: 4px 10px !important;
+}
+
+input[type="submit"]:disabled
+{
+  background-color: #ddd !important;
+  cursor: default;
 }
 
 
