--- a/views/edit.erb
+++ b/views/edit.erb
@@ -46,8 +46,8 @@ var submit = document.getElementById("submit"),
   input.addEventListener("input", function(e) { submit.disabled = false; })
 });
 
-/* Fait confirmer la sortie de page s'il y a du contenu modifié */
-window.onbeforeunload = function (e) {
+/* Fonction pour prévenir qu'il existe du contenu modifié */
+var alerte = function (e) {
   // Si le bouton [Modifier] est désactivé (ie le contenu n'a pas été modifié)
   var submit = document.getElementById("submit");
   // Alors il n'est pas nécessaire de faire confirmer la sortie de page
@@ -59,5 +59,12 @@ window.onbeforeunload = function (e) {
   if (e) e.returnValue = message;
   return message;
 };
+
+/* Active la confirmation de sortie de page s'il existe du contenu modifié */
+window.addEventListener("beforeunload", alerte);
+/* Et désactive la confirmation dès qu'on enregistre le contenu */
+document.forms[0].addEventListener("submit", function(e) {
+  window.removeEventListener("beforeunload", alerte);
+});
 
 </script>
