--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,6 +20,7 @@
     <ul id="nav">
       <li><a href="/">Journées</a></li>
       <li><a href="/new">Nouveau</a></li>
+      <li><a href="/tags">Tags</a></li>
     </ul>
 
     <div id="main">
