--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,6 +21,7 @@
       <li><a href="/">Journées</a></li>
       <li><a href="/new">Nouveau</a></li>
       <li><a href="/tags">Tags</a></li>
+      <li><a href="/excel">Excel</a></li>
     </ul>
 
     <div id="main">
