Amélioration import / export des temps.

--- a/views/excel.erb
+++ b/views/excel.erb
@@ -1,4 +1,4 @@
-<% @weeks.each do |week| %><h3><%= week[:title] %></h3>
+<% @weeks.each do |week| %><h3><%= week[:title] %> : <%= get_hours(week[:hours]) %></h3>
 
 <textarea class="excel"><% week[:days].each do |day| %><%= day.join("\t")%>
 <% end %></textarea>
