--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,14 +11,8 @@
 <body>
   <div id="page">
 
-    <div id="header">
-
-      <h1>~ <a href="/">TIM</a> ~</h1>
-
-    </div>
-
     <ul id="nav">
-      <li><a href="/">Journées</a></li>
+      <li><a href="/"><strong>TIM</strong></a></li>
       <li><a href="/new">Nouveau</a></li>
       <li><a href="/tags">Tags</a></li>
       <li><a href="/excel">Excel</a></li>
