--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,6 +15,7 @@
       <li><a href="/"><strong>TIM</strong></a></li>
       <li><a href="/new">Nouveau</a></li>
       <li><a href="/tags">Tags</a></li>
+      <li><a href="/bookmarks">Liens</a></li>
     </ul>
 
     <div id="main">
