--- a/views/bookmarks/list.erb
+++ b/views/bookmarks/list.erb
@@ -1,7 +1,7 @@
 <%= erb :"bookmarks/new" %>
 
 <div class="tags">
-<% @groups.each do |item, nb| %><%= link_group(item, nb) %>
+<% @tags.each do |tag, count| %><%= tag_link(tag, count) %>
 <% end %></div>
 
 <h3><%= @current_tag %></h3>
@@ -10,8 +10,8 @@
 <% @bookmarks.each do |bookmark| %>
   <li>
     <p>
-      <%= link_title(bookmark) %>
-      <%= list_tags(bookmark.tags, @current_tag) %>
+      <%= bookmark_link(bookmark) %>
+      <%= bookmark_tags(bookmark.tags, @current_tag) %>
       <a class="over" href="/bookmarks/edit/<%= bookmark.id %>">edit</a>
     </p>
     <p><%= bookmark.description %></p>
