--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,9 +1,9 @@
 <h3><%= day_title(@workday) %></h3>
 
 <% if @workday.errors.any? %>
-  <ul>
-  <% @workday.errors.each do |error| %><li><%= error %></li><% end %>
-  </li>
+<ul>
+  <% @workday.errors.each do |error| %><li><%= error.join(" ") %></li><% end %>
+</ul>
 <% end %>
 
 <form action="/<%= @workday.id %>" method="post">
