--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
     <ul id="nav">
       <li><a href="/"><strong>TIM</strong></a></li>
       <li><a href="/new">Nouveau</a></li>
-      <li><a href="/tags">Tags</a></li>
+      <li><a href="/projects">Projets</a></li>
       <li><a href="/bookmarks">Liens</a></li>
     </ul>
 
