--- a/views/workdays/import.erb
+++ b/views/workdays/import.erb
@@ -1,6 +1,6 @@
 <h3>Import</h3>
 
-<form action="/import" method="post">
+<form action="/workdays/import" method="post">
   <fieldset class="form">
     <textarea class="wide" id="data" name="data" cols="20" rows="2"><%= @data %></textarea>
     <p class="submit">
