--- a/views/workdays/new.erb
+++ b/views/workdays/new.erb
@@ -4,7 +4,7 @@
 </ul>
 <% end %>
 
-<form action="/" method="post">
+<form action="/workdays" method="post">
   <fieldset class="form">
     <p>
       <label for="date">Journée</label>
