--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -4,7 +4,7 @@
 <% @tags.each do |tag, count| %><%= tag_link(tag, count) %>
 <% end %></div>
 
-<h3><%= @current_tag %></h3>
+<h3>Tags // <%= @current_tag %></h3>
 
 <ul class="links">
 <% @bookmarks.each do |bookmark| %>
