--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,9 +12,9 @@
   <div id="page">
 
     <ul id="nav">
-      <li><a href="/"><strong>TIM</strong></a></li>
-      <li><a href="/new">Nouveau</a></li>
-      <li><a href="/projects">Projets</a></li>
+      <li><a href="/workdays"><strong>TIM</strong></a></li>
+      <li><a href="/workdays/new">Nouveau</a></li>
+      <li><a href="/workdays/projects">Projets</a></li>
       <li><a href="/bookmarks">Liens</a></li>
     </ul>
 
