--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
     <ul id="nav">
       <li><a href="/workdays"><strong>TIM</strong></a></li>
       <li><a href="/workdays/new">Nouveau</a></li>
-      <li><a href="/workdays/projects">Projets</a></li>
+      <li><a href="/workdays/reports">Reporting</a></li>
       <li><a href="/bookmarks">Liens</a></li>
     </ul>
 
