--- a/views/workdays/edit.erb
+++ b/views/workdays/edit.erb
@@ -32,7 +32,7 @@
     </p>
     <p class="submit">
       <input id="submit" type="submit" value="Modifier" disabled />
-      <a href="/">Annuler</a>
+      <a href="/workdays">Annuler</a>
     </p>
   </fieldset>
 </form>
