--- a/views/workdays/index.erb
+++ b/views/workdays/index.erb
@@ -5,7 +5,7 @@
 <% @workdays.each do |workday| %>
   <h3>
     <%= day_title(workday) %>
-    <a class="over" href="/edit/<%= workday.id %>">edit</a>
+    <a class="over" href="/workdays/edit/<%= workday.id %>">edit</a>
   </h3>
   <p>
     <%= workday.am_start %> / <%= workday.am_end %>
