--- a/views/workdays/new.erb
+++ b/views/workdays/new.erb
@@ -27,7 +27,7 @@
     </p>
     <p class="submit">
       <input type="submit" value="Ajouter" />
-      <a href="/">Annuler</a>
+      <a href="/workdays">Annuler</a>
     </p>
   </fieldset>
 </form>
