Evite que les tags soient sur une seule lignes.
(car balises <a> collées les unes aux autres sur la prod)

--- a/public/style.css
+++ b/public/style.css
@@ -415,6 +415,7 @@ h3:hover a.over
 .tags a
 {
   color: blue !important;
+  display: inline-block;
   margin: 0 0.25rem;
   text-decoration: none;
 }
