Généralisation des fonctions pour améliorer la saisie d'un formulaire.

--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -23,8 +23,10 @@
       <input id="tags" name="bookmark[tags]" type="text" value="<%= @bookmark.tags %>" />
     </p>
     <p class="submit">
-      <input type="submit" value="Ajouter" />
+      <input id="submit" type="submit" value="Ajouter" />
       <a href="/bookmarks">Annuler</a>
     </p>
   </fieldset>
 </form>
+
+<script src="/small.form.js"></script>
