--- a/views/workdays/new.erb
+++ b/views/workdays/new.erb
@@ -26,8 +26,10 @@
       <textarea id="detail" name="workday[detail]" cols="20" rows="2"><%= @workday.detail %></textarea>
     </p>
     <p class="submit">
-      <input type="submit" value="Ajouter" />
+      <input id="submit" type="submit" value="Ajouter" />
       <a href="/workdays">Annuler</a>
     </p>
   </fieldset>
 </form>
+
+<script src="/small.form.js"></script>
