--- a/views/bookmarks/edit.erb
+++ b/views/bookmarks/edit.erb
@@ -26,8 +26,10 @@
       <input id="tags" name="bookmark[tags]" type="text" value="<%= @bookmark.tags %>" />
     </p>
     <p class="submit">
-      <input type="submit" value="Modifier" />
+      <input id="submit" type="submit" value="Modifier" />
       <a href="/bookmarks">Annuler</a>
     </p>
   </fieldset>
 </form>
+
+<script src="/small.form.js"></script>
