--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,6 +16,7 @@
       <li><a href="/workdays/new">Nouveau</a></li>
       <li><a href="/workdays/reports">Reporting</a></li>
       <li><a href="/bookmarks">Liens</a></li>
+      <li><a href="/notes">Notes</a></li>
     </ul>
 
     <div id="main">
