--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,6 +17,7 @@
       <li><a href="/workdays/reports">Reporting</a></li>
       <li><a href="/bookmarks">Liens</a></li>
       <li><a href="/notes">Notes</a></li>
+      <li><a href="/notes/todo">Todo</a></li>
     </ul>
 
     <div id="main">
