--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,6 +18,7 @@
       <li><a href="/bookmarks">Liens</a></li>
       <li><a href="/notes">Notes</a></li>
       <li><a href="/notes/todo">Todo</a></li>
+      <li><a href="/calendar">Calendrier</a></li>
     </ul>
 
     <div id="main">
