--- a/views/calendar.erb
+++ b/views/calendar.erb
@@ -6,7 +6,7 @@
   </thead>
   <tbody><% 0.upto(41) do |lig| %>
     <tr<%= add_class(@matrice[0][lig][0]) %>><% 0.upto(12) do |col| %>
-      <td<%= add_class(@col_styles[col]) + add_title(@matrice[col][lig][1]) %>><%= @matrice[col][lig][0] %></td><% end %>
+      <td<%= add_class(@col_styles[col] + @matrice[col][lig][2]) + add_title(@matrice[col][lig][1]) %>><%= @matrice[col][lig][0] %></td><% end %>
     </tr><% end %>
   </tbody>
   <tfoot>
