Ajoute une ligne vide en fin de note pour faciliter saisie d'une suite.

--- a/views/notes/edit.erb
+++ b/views/notes/edit.erb
@@ -13,7 +13,7 @@
     </p>
     <p>
       <label for="content">Contenu</label>
-      <textarea id="content" name="note[content]" cols="20" rows="22" class="wide"><%= @note.content %></textarea>
+      <textarea id="content" name="note[content]" cols="20" rows="22" class="wide"><%= @note.content + "\n" %></textarea>
     </p>
     <p>
       <label for="tags">Liste tags</label>
