Révision charte graphique.

--- a/views/reports/list.erb
+++ b/views/reports/list.erb
@@ -1,9 +1,9 @@
 <form action="/workdays/reports" method="post">
   <h3>
     Reporting période du
-    <input class="short" id="from" name="from" type="text" value="<%= @from %>" />
+    <input class="short" id="from" name="from" type="date" value="<%= @from %>" />
     au
-    <input class="short" id="to" name="to" type="text" value="<%= @to %>" />
+    <input class="short" id="to" name="to" type="date" value="<%= @to %>" />
     &nbsp;
     <input type="submit" value="Ok" />
   </h3>
