--- a/views/workdays/new.erb
+++ b/views/workdays/new.erb
@@ -8,7 +8,7 @@
   <fieldset class="form">
     <p>
       <label for="date">Journée</label>
-      <input class="short" id="date" name="workday[date]" type="text" value="<%= input_date(@workday.date) %>" />
+      <input class="short" id="date" name="workday[date]" type="date" value="<%= input_date(@workday.date) %>" />
       <span class="not_important">(format yyyy-mm-dd)</span>
     </p>
     <p>
