--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fr-fr" />
   <meta charset="UTF-8" />
-  <title>TIM</title>
+  <title>TIMTIM</title>
   <link href="/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -12,11 +12,12 @@
   <div id="page">
 
     <ul id="nav">
-      <li><a href="/workdays"><strong>TIM</strong></a></li>
-      <li><a href="/workdays/new">Nouveau</a></li>
+      <li><a href="/workdays"><strong>TIMTIM</strong></a></li>
+      <li><strong><a href="/workdays/new">+</a></strong></li>
       <li><a href="/workdays/reports">Reporting</a></li>
       <li><a href="/bookmarks">Liens</a></li>
       <li><a href="/notes">Notes</a></li>
+      <li><strong><a href="/notes/new">+</a></strong></li>
       <li><a href="/notes/todo">Todo</a></li>
       <li><a href="/calendar">Calendrier</a></li>
     </ul>
