--- a/views/notes/edit.erb
+++ b/views/notes/edit.erb
@@ -12,11 +12,11 @@
       <input id="title" name="note[title]" type="text" value="<%= @note.title %>" />
     </p>
     <p>
-      <label for="content">Contenu</label>
+      <label for="content">Note</label>
       <textarea id="content" name="note[content]" cols="20" rows="22" class="wide"><%= @note.content + "\n" %></textarea>
     </p>
     <p>
-      <label for="tags">Liste tags</label>
+      <label for="tags">Tags</label>
       <input id="tags" name="note[tags]" type="text" value="<%= @note.tags %>" />
     </p>
     <p class="submit">
