--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -19,7 +19,7 @@
       <textarea id="description" name="bookmark[description]" cols="20" rows="2" class="small"><%= @bookmark.description %></textarea>
     </p>
     <p>
-      <label for="tags">Liste tags</label>
+      <label for="tags">Tags</label>
       <input id="tags" name="bookmark[tags]" type="text" value="<%= @bookmark.tags %>" />
     </p>
     <p class="submit">
